tests/types/errors/map_slice.mochi
let m = {"a": 1}
let x = m[0:1]
